[gd_scene load_steps=5 format=3 uid="uid://cp0ffnjxmp1k0"]

[ext_resource type="Script" uid="uid://dk15b4bbrew8c" path="res://scripts/mainMenuUI.gd" id="1_sr4jy"]
[ext_resource type="PackedScene" uid="uid://euyl1tmhr3as" path="res://scenes/GUI/options.tscn" id="2_repbf"]
[ext_resource type="PackedScene" uid="uid://ewfqc8fppiin" path="res://scenes/GUI/menuButton.tscn" id="5_r0qkl"]
[ext_resource type="Texture2D" uid="uid://ulb186cdfm8k" path="res://assets/titleScreenBG.jpg" id="7_eui80"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sr4jy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="OptionsGUI" parent="." instance=ExtResource("2_repbf")]
visible = false
layout_mode = 1
offset_left = -576.0
offset_top = -312.0
offset_right = -576.0
offset_bottom = -312.0

[node name="TitleScreenBg" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("7_eui80")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
offset_left = -400.0
offset_top = 200.0
offset_right = -400.0
offset_bottom = 200.0

[node name="StartBtn" parent="MenuBar" instance=ExtResource("5_r0qkl")]
unique_name_in_owner = true
layout_mode = 2
offset_top = -189.0
offset_right = 134.0
offset_bottom = -133.0

[node name="OptionsBtn" parent="MenuBar" instance=ExtResource("5_r0qkl")]
unique_name_in_owner = true
layout_mode = 2
offset_top = -126.0
offset_right = 134.0
offset_bottom = -70.0
text = "Options"

[node name="ExitBtn" parent="MenuBar" instance=ExtResource("5_r0qkl")]
unique_name_in_owner = true
layout_mode = 2
offset_top = -63.0
offset_right = 65.0
offset_bottom = -7.0
text = "Exit"
